# oyx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
audio_native/: CMakeLists.txt
client/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  control_client.cpp  echo_canceller.cpp  echo_canceller.h  main.cpp  main_window.cpp  main_window.h  network_discovery.cpp  participant_row.cpp  portaudio_dyn.h  settings_dialog.cpp  startup_dialog.cpp  startup_dialog.h  volume_control_panel.cpp  volume_control_panel.h
client/app/: main.cpp
client/audio/: aec_processor.cpp  aec_processor.h  audio_engine.cpp  audio_engine.h
client/net/: control_client.cpp  control_client.h  network_discovery.cpp  network_discovery.h
client/p2p/: distributed_sfu_manager.cpp  distributed_sfu_manager.h  multi_sfu_manager.cpp  multi_sfu_manager.h  peer_discovery.cpp  peer_discovery.h  rtp_transport.cpp  rtp_transport.h
client/server/: voice_server.cpp  voice_server.h
client/ui/: main_window.cpp  main_window.h  main_window.ui  participant_item.ui  settings_dialog.ui  volume_control.ui  volume_control_panel.cpp
client/ui/components/: participant_row.cpp  participant_row.h  settings_dialog.cpp  settings_dialog.h  startup_dialog.cpp  startup_dialog.h  ui_helpers.cpp  ui_helpers.h
ports-overlay/webrtc-audio-processing/: portfile.cmake  vcpkg.json  webrtc-audio-processing-config.cmake.in
server/: CMakeLists.txt  main.cpp  voice_server.cpp
shared/: audio_packet.cpp  audio_packet.h  opus_codec.cpp  opus_codec.h  socket_utils.cpp  socket_utils.h  winsock_init.cpp  winsock_init.h
